Edit makefile receving variables, add different implementations of set.h

--- a/Assignment/a3/q2/makefile
+++ b/Assignment/a3/q2/makefile
@@ -1,5 +1,5 @@
-test:
+test: $(set)
 	clang -Wall -c test.c -o test.o
-	clang -Wall main.c set.o test.o -o main
+	clang -Wall main.c $(set) test.o -o main
 	./main
 
